--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "recharts": "https://aistudiocdn.com/recharts@^3.4.1",
-    "recharts/": "https://aistudiocdn.com/recharts@^3.4.1/"
+    "recharts/": "https://aistudiocdn.com/recharts@^3.4.1/",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.7"
   }
 }
 </script>
